Commit after featured section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,22 @@
             </div>
         </div>
     </header>
+
+
+    <main>
+        <!-- FEATURED BIKE SECTION  -->
+        <section>
+            <div class="m0 m-auto text-center mt-5 md:max-w-2xl w-full lg:max-w-6xl pt-7">
+                <h1 class="text-black font-semibold text-4xl">Featured Bikes In This Year</h1>
+                <p class="font-semibold text-sm text-[#E76F51] mt-3">Best bike collection</p>
+                <div class="flex flex-col justify-between items-center mt-10 p-5 lg:flex-row lg:p-0">
+                    <img class="w-auto" src="images/others/feature-bike.png" alt="">
+                    <img class="w-auto" src="images/others/feature-bike.png" alt="">
+                    <img class="w-auto" src="images/others/feature-bike.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
