Commit after Latest News Section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 </head>
 
 <body>
+    <!-- HEADER SECTION  -->
     <header class="font-poppins">
-        <div class="hero min-h-screen" style="background-image: url('../images/others/background.png');">
+        <div class="hero min-h-screen" style="background-image: url(/images/others/background.png);">
             <!-- NAVBAR  -->
             <div class="hero-overlay bg-opacity-50">
                 <nav class="md:max-w-2xl lg:max-w-6xl m-auto">
@@ -75,13 +76,65 @@
     <main>
         <!-- FEATURED BIKE SECTION  -->
         <section>
-            <div class="m0 m-auto text-center mt-5 md:max-w-2xl w-full lg:max-w-6xl pt-7">
+            <div class="m0 m-auto font-poppins text-center mt-7 md:max-w-2xl w-full lg:max-w-6xl pt-7">
                 <h1 class="text-black font-semibold text-4xl">Featured Bikes In This Year</h1>
                 <p class="font-semibold text-sm text-[#E76F51] mt-3">Best bike collection</p>
                 <div class="flex flex-col justify-between items-center mt-10 p-5 lg:flex-row lg:p-0">
                     <img class="w-auto" src="images/others/feature-bike.png" alt="">
                     <img class="w-auto" src="images/others/feature-bike.png" alt="">
                     <img class="w-auto" src="images/others/feature-bike.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- LATEST NEWS SECTION  -->
+        <section>
+            <div class="m0 m-auto font-poppins text-center mt-7 md:max-w-2xl w-full lg:max-w-6xl pt-7">
+                <h1 class="text-black font-semibold text-4xl">Latest News</h1>
+                <div class="grid grid-cols-1 px-4 gap-7 lg:grid lg:grid-cols-3 lg:px-0">
+                    <!-- CARD-1  -->
+                    <div class="card bg-base-100 shadow-xl">
+                        <figure class="px-4 pt-5">
+                            <img src="/images/others/latest1.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body text-left">
+                            <h2 class="card-title text-left text-2xl font-bold text-[#18191F]">Ducati XDIAVEL S-73</h2>
+                            <p class="text-sm font-normal text-[#6C6C6C] mb-3">Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                            <div class="card-actions">
+                                <button class="btn btn-outline btn-error">READ MORE</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- CARD 2    -->
+                    <div class="card bg-base-100 shadow-xl">
+                        <figure class="px-4 pt-5">
+                            <img src="/images/others/latest2.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body text-left">
+                            <h2 class="card-title text-left text-2xl font-bold text-[#18191F]">Motorcycles & Scooters
+                            </h2>
+                            <p class="text-sm font-normal text-[#6C6C6C] mb-3">Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                            <div class="card-actions">
+                                <button class="btn btn-outline btn-error">READ MORE</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- CARD 3  -->
+                    <div class="card bg-base-100 shadow-xl">
+                        <figure class="px-4 pt-5">
+                            <img src="/images/others/latest3.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body text-left">
+                            <h2 class="card-title text-left text-2xl font-bold text-[#18191F]">2021 Honda CBR500R</h2>
+                            <p class="text-sm font-normal text-[#6C6C6C] mb-3">Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                            <div class="card-actions">
+                                <button class="btn btn-outline btn-error">READ MORE</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
