Commit after clients section

--- a/index.html
+++ b/index.html
@@ -138,6 +138,91 @@
                 </div>
             </div>
         </section>
+
+        <!-- CLIENTS SECTION  -->
+        <section>
+            <div class="m0 m-auto font-poppins text-center mt-7 md:max-w-2xl w-full lg:max-w-6xl pt-7">
+                <h1 class="text-black font-semibold text-4xl">Happy <span class="text-[#E76F51]">Clients Says</span>
+                </h1>
+                <div class="m0 m-auto grid grid-cols-1 px-4 gap-20 lg:grid lg:grid-cols-3 lg:px-0">
+                    <!-- CARD-1  -->
+                    <div class="card bg-base-100 border border-gray-300 rounded-md mt-11 space-y-2">
+                        <figure class="px-3 pt-5">
+                            <img src="images/others/user-1.png" alt="Shoes" class="rounded-xl w-36" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <p class="text-[#6C6C6C] text-sm">Slate helps you see how
+                                many more days you need
+                                to work to reach your financial
+                                goal for the month and year.</p>
+                            <div class="rating">
+                                <div class="rating">
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                </div>
+                            </div>
+                            <p class="text-[#23A6F0] text-sm font-semibold">Regina Miles</p>
+                            <p class="text-[#252B42] text-sm font-semibold">Banker</p>
+                        </div>
+                    </div>
+
+                    <!-- CARD 2  -->
+                    <div class="card bg-base-100 border border-gray-300 rounded-md mt-11 space-y-2">
+                        <figure class="px-3 pt-5">
+                            <img src="images/others/user-2.png" alt="Shoes" class="rounded-xl w-36" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <p class="text-[#6C6C6C] text-sm">Slate helps you see how
+                                many more days you need
+                                to work to reach your financial
+                                goal for the month and year.</p>
+                            <div class="rating">
+                                <div class="rating">
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                </div>
+                            </div>
+                            <p class="text-[#23A6F0] text-sm font-semibold">Regina Miles</p>
+                            <p class="text-[#252B42] text-sm font-semibold">Banker</p>
+                        </div>
+                    </div>
+
+                    <!-- CARD-3  -->
+                    <div class="card bg-base-100 border border-gray-300 rounded-md mt-11 space-y-2">
+                        <figure class="px-3 pt-5">
+                            <img src="images/others/user-3.png" alt="Shoes" class="rounded-xl w-36" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <p class="text-[#6C6C6C] text-sm">Slate helps you see how
+                                many more days you need
+                                to work to reach your financial
+                                goal for the month and year.</p>
+                            <div class="rating">
+                                <div class="rating">
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                </div>
+                            </div>
+                            <p class="text-[#23A6F0] text-sm font-semibold">Regina Miles</p>
+                            <p class="text-[#252B42] text-sm font-semibold">Banker</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 
