--- a/index.html
+++ b/index.html
@@ -223,6 +223,64 @@
             </div>
         </section>
 
+        <!-- FAQ SECTION  -->
+        <section>
+            <div class="m0 m-auto font-poppins text-center mt-7 md:max-w-2xl w-full lg:max-w-6xl pt-7">
+                <h1 class="text-black font-semibold text-4xl">Frequently Asked <span
+                        class="text-[#E76F51]">Questions</span>
+                </h1>
+                <div class="flex flex-col gap-16 justify-between items-center mt-10 font-inter md:flex-row md:gap-0">
+                    <div class="container-img w-1/2">
+                        <img class="w-full md:w-[75%]" src="images/others/faq.png" alt="">
+                    </div>
+                    <div class="container-accordion w-1/2">
+                        <div class="w-full">
+                            <div class="collapse collapse-arrow border border-gray-200 mb-3">
+                                <input type="radio" name="my-accordion-2" checked="checked" />
+                                <div class="collapse-title text-lg font-medium text-[#383838]">
+                                    <p>What are the most important things I should
+                                        know about riding a bike?</p>
+                                </div>
+                                <div class="collapse-content">
+                                    <p class="text-[#7E848C] text-sm">Safety First! Always obey the rules of the road.
+                                        Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your
+                                        bike—not just “riding” your bike. This will help you be a more focused and
+                                        legally compliant bike rider. </p>
+                                </div>
+                            </div>
+                            <div class="collapse collapse-arrow border border-gray-200 text-[#383838] mb-3">
+                                <input type="radio" name="my-accordion-2" />
+                                <div class="collapse-title text-lg font-medium">
+                                    <p>How can I tell if my helmet is old and I need a
+                                        new one?</p>
+                                </div>
+                                <div class="collapse-content">
+                                    <p class="text-[#7E848C] text-sm">Its upto you</p>
+                                </div>
+                            </div>
+                            <div class="collapse collapse-arrow border border-gray-200 text-[#383838] mb-3">
+                                <input type="radio" name="my-accordion-2" />
+                                <div class="collapse-title text-lg font-medium">
+                                    <p>My bike has been in storage is it safe to ride?</p>
+                                </div>
+                                <div class="collapse-content">
+                                    <p class="text-[#7E848C] text-sm">Might need a little bit of servicing</p>
+                                </div>
+                            </div>
+                            <div class="collapse collapse-arrow border border-gray-200 text-[#383838] mb-3">
+                                <input type="radio" name="my-accordion-2" />
+                                <div class="collapse-title text-lg font-medium">
+                                    <p>What rules should I follow when riding my bike?</p>
+                                </div>
+                                <div class="collapse-content">
+                                    <p class="text-[#7E848C] text-sm">BRTA Rules</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
