--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <!-- CARD-1  -->
                     <div class="card bg-base-100 shadow-xl">
                         <figure class="px-4 pt-5">
-                            <img src="/images/others/latest1.png" alt="Shoes" class="rounded-xl" />
+                            <img src="images/others/latest1.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body text-left">
                             <h2 class="card-title text-left text-2xl font-bold text-[#18191F]">Ducati XDIAVEL S-73</h2>
@@ -109,7 +109,7 @@
                     <!-- CARD 2    -->
                     <div class="card bg-base-100 shadow-xl">
                         <figure class="px-4 pt-5">
-                            <img src="/images/others/latest2.png" alt="Shoes" class="rounded-xl" />
+                            <img src="images/others/latest2.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body text-left">
                             <h2 class="card-title text-left text-2xl font-bold text-[#18191F]">Motorcycles & Scooters
@@ -124,7 +124,7 @@
                     <!-- CARD 3  -->
                     <div class="card bg-base-100 shadow-xl">
                         <figure class="px-4 pt-5">
-                            <img src="/images/others/latest3.png" alt="Shoes" class="rounded-xl" />
+                            <img src="images/others/latest3.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body text-left">
                             <h2 class="card-title text-left text-2xl font-bold text-[#18191F]">2021 Honda CBR500R</h2>
