--- a/index.html
+++ b/index.html
@@ -282,6 +282,34 @@
             </div>
         </section>
     </main>
+
+    <footer class="bg-[#0B0D17]">
+        <div
+            class="flex-col footer-container m0 m-auto font-poppins text-center mt-7 md:max-w-2xl w-full lg:max-w-6xl pt-16 pb-16 flex justify-between items-center md:flex-row">
+            <div class="flex flex-col text-center
+            space-y-4 md:text-left">
+                <div class="div">
+                    <a class="text-white ml-3" href="#">Download Now</a>
+                    <a class="text-white ml-3" href="#">Licence</a>
+                </div>
+                <div>
+                    <a class="text-white ml-3" href="#">About</a>
+                    <a class="text-white ml-3" href="#">Features</a>
+                    <a class="text-white ml-3" href="#">Pricing</a>
+                    <a class="text-white ml-3" href="#">Careers</a>
+                    <a class="text-white ml-3" href="#">Help</a>
+                    <a class="text-white ml-3" href="#">Privacy Policy</a>
+                </div>
+                <div class="text-white"> © 2023 Bikes Zone by Sajeed. All rights reserved</div>
+            </div>
+            <div class="footer-right space-y-3">
+                <p class="text-white">Get The App</p>
+                <img class="w-28" src="images/others/ios.png" alt="">
+                <img class="w-28" src="images/others/android.png" alt="">
+            </div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
